# anomaly-detection-for-iot

./: README.md
RocEdgeApps/apps/: CMakeLists.txt
RocEdgeApps/apps/rrcf_intro/: main.cpp  user_rule.cpp  user_rule.hpp  user_rule_data.cpp  user_rule_optimize.cpp
RocEdgeApps/apps/rrcf_intro/python/: rrcf_intro.ipynb
RocEdgeApps/apps/rrcf_nyc_taxi/: main.cpp  user_rule.cpp  user_rule.hpp  user_rule_data.cpp
RocEdgeApps/apps/rrcf_nyc_taxi/python/: nyc_taxi.ipynb
RocEdgeApps/apps/user_rule_fx_scaling_law/: main.cpp  user_rule_sl.cpp  user_rule_sl.hpp  user_rule_sl_data.cpp  user_rule_sl_optimize.cpp
RocEdgeApps/libroc_edge/msvc/Release/: libroc_edge.lib
RocEdgeAppsData/comparison/: comparison_0.csv  comparison_1.csv  comparison_2.csv  comparison_3.csv  comparison_4.csv
RocEdgeIF/include/roc_edge/: roc_edge_interface.hpp  user_rule_base.hpp
RocEdgeOut/fx_scaling_law/log/: roc_edge.txt
RocEdgeOut/rrcf_intro/: rrcf_batch.csv  rrcf_comparison_codisp.csv  rrcf_streaming.csv
RocEdgeOut/rrcf_intro/log/: roc_edge.txt
RocEdgeOut/rrcf_nyc_taxi/: rrcf_nyc_taxi.csv
RocEdgeOut/rrcf_nyc_taxi/log/: roc_edge.txt
